[gd_scene load_steps=2 format=3 uid="uid://scykhu1qsueb"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_3efw0"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("start_button", "credits_button", "exit_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3efw0")
start_button = NodePath("VBoxContainer/StartButton")
credits_button = NodePath("VBoxContainer/CreditsButton")
exit_button = NodePath("VBoxContainer/ExitButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
